--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ DB_TYPE="mysql"
 # SendGrid Settings
 SENDGRID_API_KEY=""
 
+#JSONLink Settings
+JSONLINK_API_KEY=""
+
 # Cloudflare R2 Settings
 R2_ACCOUNT_ID=""
 R2_ACCESS_KEY_ID=""
