--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ramsey/uuid": "^4.7",
         "aws/aws-sdk-php": "^3.300",
         "samayo/bulletproof": "^5.0",
-        "intervention/image": "^2.7"
+        "intervention/image": "^2.7",
+        "dandylion/productdetails": "^0.2.0",
+        "curl/curl": "^2.5"
     },
     "config": {
         "platform": {
